0.5.5
[Alexandr Topilski]
- Logging mseconds option
- Not able to view Graphical History Chart on Windows #5
- UnQLite database support http://unqlite.org/
- Lmdb database support http://symas.com/mdb/
- Bugs fixes

0.3.5 / September 5, 2015
[Alexandr Topilski]
- Package installation fails on Ubuntu 14 #56
- RocksDB database support http://rocksdb.org/
- Added social buttons
- [SSDB] Ssdb auth command #54

0.2.5 / August 22, 2015
[Alexandr Topilski]
- Update hiredis sources
- Sentinel commands support for Redis
- Calltips for commands (Press '(' in console after command)
- Export/import settings to encrypted file
- Double click show value for keys
- Display value as readable json
- Save value from text view
- Official SSDB logo
- View key dialog direct TTL value change for Redis
- Bugs fixes
 
0.2.4 / August 10, 2015
[Alexandr Topilski]
- LevelDB database support http://leveldb.org/
- Info and history for LevelDB
- Update libssh2 sources
- Resolve ssh_address for Redis connection
- SSH default path for private key(~/.ssh/id_rsa) and for public(~/.ssh/id_rsa.pub)
- SSDB update sources, added command support(qpush, qpop, qslice, qclear)
- TTL calculate for key
- Redis driver code optimization
- Fix crash lined with double-clicked in settings dialog

0.1.4 / Jule 29, 2015
- Display db name in console
- Auto open console preference