@@ -23,6 +23,7 @@ namespace fastonosql
         extern const QString trView;
         extern const QString trViews;
         extern const QString trHistory;
+        extern const QString trClearHistory;
         extern const QString trFile;
         extern const QString trInfo;
         extern const QString trTools;
